2009-09-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Adele Peterson.

        Update Security Group Members list.

        * security/security-group-members.html:

2009-09-06  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Eric Seidel.

        Drop <definition-src> support
        https://bugs.webkit.org/show_bug.cgi?id=28991

        When SVG 1.1 Second Edition is a Recommendation we can remove the
        entry altogether.

        * projects/svg/status.xml: Update page to state that <definition-src>
        is not supported.

2009-08-26  Mark Rowe  <mrowe@apple.com>

        Upgrade WordPress to the latest version.

        * blog/wp-includes/version.php:
        * blog/wp-login.php:

2009-08-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        major-objects.html should show direct Frame <-> Document pointers
        https://bugs.webkit.org/show_bug.cgi?id=28479

        * coding/major-objects.html: Added pointers to diagram.

2009-08-18  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        Mention handy --bug flag of prepare-ChangeLog script.
        https://bugs.webkit.org/show_bug.cgi?id=28425

        * coding/contributing.html: Add a reference for --bug flag

2009-08-12  Joe Mason  <joe.mason@torchmobile.com>

        Reviewed by Adam Barth.

        Better explanation of "Null after navigation" in object diagram
        https://bugs.webkit.org/show_bug.cgi?id=28232

        * coding/major-objects.html:

2009-08-11  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Remove a few characters from the ASCII art to make it fit better in the
        template.

        * coding/major-objects.html:

2009-08-11  Adam Barth  <abarth@webkit.org>

        Reviewed by Oliver Hunt.

        Document relation between major objects in WebCore
        https://bugs.webkit.org/show_bug.cgi?id=28210

        Added a diagram showing the relation between major objects.
