@@ -99,6 +99,11 @@ you can provide, the better.</p>
             keys, arrow buttons, scroll thumb, clicking above or below the thumb, scroll-wheel mouse, etc.</li>
     </ul></li><br>
 
+    <li><b>Keywords</b>
+        <p>If the bug is specific to one or more of the ports of WebKit (Qt, GTK, Wx, etc), please use any of the
+        <a href="https://bugs.webkit.org/describekeywords.cgi">valid keywords</a> to tag the bug report accordingly.</p>
+    </li>
+
     <li>
         <b>Depends on</b>
         <p>If the fix for this bug depends on another bug fix, put the other bug's number here. Otherwise, leave it empty.</p>
